--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:qfhOydNvk3KjbcPG+G5xZmaFItnLrHv5lKHB2xQpk5M=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
